--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,11 +7,8 @@
     <title>To Do List</title>
 </head>
 <body>
-    <% if (day === 'Saturday'|| day === 'Sunday'){ %>
-        <h1 style = 'color:purple'><%= day  %> ToDo List</h1>
-    <%}else{%>
-        <h1 style = 'color:blue'><%= day  %>ToDo List</h1>
-    <% } %>
+    <h1><%= day  %></h1>
+    
     
 </body>
 </html>
