--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,7 +8,15 @@
 </head>
 <body>
     <h1><%= day  %></h1>
-    
-    
+    <ul>
+      <% for(let i=0;i< newListItem.length;i++){ %>
+        <li><%= newListItem[i] %></li>
+      <% } %>  
+        
+    </ul>
+    <form action="/" method="post">
+        <input type="text" name = "newItem">
+        <button type="submit">Add Item</button>
+    </form>
 </body>
 </html>
