--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,18 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1><%= day  %></h1>
-    <ul>
-      <% for(let i=0;i< newListItem.length;i++){ %>
-        <li><%= newListItem[i] %></li>
-      <% } %>  
-        
-    </ul>
-    <form action="/" method="post">
-        <input type="text" name = "newItem">
-        <button type="submit">Add Item</button>
-    </form>
+    <div class="box" id="heading">
+        <h1><%= day  %></h1>
+    </div>
+    <div class="box">
+        <% for(let i=0;i< newListItem.length;i++){ %>
+        <div class="item">
+            <input type="checkbox"  id="">
+            <p><%= newListItem[i] %></p>
+        </div>
+          <% } %>  
+          <form action="/" method="post" class="item">
+            <input type="text" name = "newItem" placeholder="New Item">
+            <button type="submit" name="button">+</button>
+        </form>  
+    </div>
+    
+   
 </body>
 </html>
